// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MdxRenderer /> renders empty document 1`] = `
<div
  class="markdown-body"
/>
`;

exports[`<MdxRenderer /> renders markdown with LaTeX content 1`] = `
<div
  class="markdown-body"
>
  <h1>
    This is a LaTex rendered content
  </h1>
  

  <p
    class="latex-inline"
  >
    <svg>
      some svg content
    </svg>
  </p>
</div>
`;

exports[`<MdxRenderer /> renders markdown with MDX 1`] = `
<div
  class="markdown-body"
>
  <h1>
    This is a MDX content
  </h1>
  

  <p>
    This paragraph shows what are the advanced uses provided by using 
    <em>
      MDX
    </em>
  </p>
  

  <div
    data-testid="mdx-rendered-block"
    style="padding:1rem;background-color:violet"
  >
    <p>
      Instructor can override the design of the document.
    </p>
  </div>
  

  <p>
    One can define variables:
  </p>
  


  <p>
    And use it in text like in the 70th
  </p>
</div>
`;

exports[`<MdxRenderer /> renders markdown with math to KaTeX 1`] = `
<div
  class="markdown-body"
>
  <h1>
    This is a math content
  </h1>
  

  <p>
    <span
      class="math math-inline"
    >
      <span
        class="katex"
      >
        <span
          class="katex-mathml"
        >
          <math
            xmlns="http://www.w3.org/1998/Math/MathML"
          >
            <semantics>
              <mrow>
                <mi>
                  I
                </mi>
                <mo>
                  =
                </mo>
                <mo>
                  ∫
                </mo>
                <mi>
                  ρ
                </mi>
                <msup>
                  <mi>
                    R
                  </mi>
                  <mn>
                    2
                  </mn>
                </msup>
                <mi>
                  d
                </mi>
                <mi>
                  V
                </mi>
              </mrow>
              <annotation
                encoding="application/x-tex"
              >
                I = \\int \\rho R^{2} dV
              </annotation>
            </semantics>
          </math>
        </span>
        <span
          aria-hidden="true"
          class="katex-html"
        >
          <span
            class="base"
          >
            <span
              class="strut"
              style="height:0.6833em"
            />
            <span
              class="mord mathnormal"
              style="margin-right:0.07847em"
            >
              I
            </span>
            <span
              class="mspace"
              style="margin-right:0.2778em"
            />
            <span
              class="mrel"
            >
              =
            </span>
            <span
              class="mspace"
              style="margin-right:0.2778em"
            />
          </span>
          <span
            class="base"
          >
            <span
              class="strut"
              style="height:1.1202em;vertical-align:-0.3061em"
            />
            <span
              class="mop op-symbol small-op"
              style="margin-right:0.19445em;position:relative;top:-0.0006em"
            >
              ∫
            </span>
            <span
              class="mspace"
              style="margin-right:0.1667em"
            />
            <span
              class="mord mathnormal"
            >
              ρ
            </span>
            <span
              class="mord"
            >
              <span
                class="mord mathnormal"
                style="margin-right:0.00773em"
              >
                R
              </span>
              <span
                class="msupsub"
              >
                <span
                  class="vlist-t"
                >
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height:0.8141em"
                    >
                      <span
                        style="top:-3.063em;margin-right:0.05em"
                      >
                        <span
                          class="pstrut"
                          style="height:2.7em"
                        />
                        <span
                          class="sizing reset-size6 size3 mtight"
                        >
                          <span
                            class="mord mtight"
                          >
                            <span
                              class="mord mtight"
                            >
                              2
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
            <span
              class="mord mathnormal"
            >
              d
            </span>
            <span
              class="mord mathnormal"
              style="margin-right:0.22222em"
            >
              V
            </span>
          </span>
        </span>
      </span>
    </span>
  </p>
  

  <div
    class="math math-display"
  >
    <span
      class="katex-display"
    >
      <span
        class="katex"
      >
        <span
          class="katex-mathml"
        >
          <math
            display="block"
            xmlns="http://www.w3.org/1998/Math/MathML"
          >
            <semantics>
              <mrow>
                <mi>
                  I
                </mi>
                <mo>
                  =
                </mo>
                <mo>
                  ∫
                </mo>
                <mi>
                  ρ
                </mi>
                <msup>
                  <mi>
                    R
                  </mi>
                  <mn>
                    2
                  </mn>
                </msup>
                <mi>
                  d
                </mi>
                <mi>
                  V
                </mi>
              </mrow>
              <annotation
                encoding="application/x-tex"
              >
                I = \\int \\rho R^{2} dV
              </annotation>
            </semantics>
          </math>
        </span>
        <span
          aria-hidden="true"
          class="katex-html"
        >
          <span
            class="base"
          >
            <span
              class="strut"
              style="height:0.6833em"
            />
            <span
              class="mord mathnormal"
              style="margin-right:0.07847em"
            >
              I
            </span>
            <span
              class="mspace"
              style="margin-right:0.2778em"
            />
            <span
              class="mrel"
            >
              =
            </span>
            <span
              class="mspace"
              style="margin-right:0.2778em"
            />
          </span>
          <span
            class="base"
          >
            <span
              class="strut"
              style="height:2.2222em;vertical-align:-0.8622em"
            />
            <span
              class="mop op-symbol large-op"
              style="margin-right:0.44445em;position:relative;top:-0.0011em"
            >
              ∫
            </span>
            <span
              class="mspace"
              style="margin-right:0.1667em"
            />
            <span
              class="mord mathnormal"
            >
              ρ
            </span>
            <span
              class="mord"
            >
              <span
                class="mord mathnormal"
                style="margin-right:0.00773em"
              >
                R
              </span>
              <span
                class="msupsub"
              >
                <span
                  class="vlist-t"
                >
                  <span
                    class="vlist-r"
                  >
                    <span
                      class="vlist"
                      style="height:0.8641em"
                    >
                      <span
                        style="top:-3.113em;margin-right:0.05em"
                      >
                        <span
                          class="pstrut"
                          style="height:2.7em"
                        />
                        <span
                          class="sizing reset-size6 size3 mtight"
                        >
                          <span
                            class="mord mtight"
                          >
                            <span
                              class="mord mtight"
                            >
                              2
                            </span>
                          </span>
                        </span>
                      </span>
                    </span>
                  </span>
                </span>
              </span>
            </span>
            <span
              class="mord mathnormal"
            >
              d
            </span>
            <span
              class="mord mathnormal"
              style="margin-right:0.22222em"
            >
              V
            </span>
          </span>
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`<MdxRenderer /> renders markdown with math to Mathjax 1`] = `
<div
  class="markdown-body"
>
  <h1>
    This is a math content
  </h1>
  

  <p>
    <span
      class="math math-inline"
    >
      <mjx-container
        classname="MathJax"
        jax="SVG"
      >
        <svg
          focusable="false"
          height="2.578ex"
          role="img"
          style="vertical-align:-0.691ex"
          viewBox="0 -833.9 5615.8 1139.4"
          width="12.705ex"
          xmlns="http://www.w3.org/2000/svg"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M43 1Q26 1 26 10Q26 12 29 24Q34 43 39 45Q42 46 54 46H60Q120 46 136 53Q137 53 138 54Q143 56 149 77T198 273Q210 318 216 344Q286 624 286 626Q284 630 284 631Q274 637 213 637H193Q184 643 189 662Q193 677 195 680T209 683H213Q285 681 359 681Q481 681 487 683H497Q504 676 504 672T501 655T494 639Q491 637 471 637Q440 637 407 634Q393 631 388 623Q381 609 337 432Q326 385 315 341Q245 65 245 59Q245 52 255 50T307 46H339Q345 38 345 37T342 19Q338 6 332 0H316Q279 2 179 2Q143 2 113 2T65 2T43 1Z"
              id="MJX-1-TEX-I-1D43C"
            />
            <path
              d="M56 347Q56 360 70 367H707Q722 359 722 347Q722 336 708 328L390 327H72Q56 332 56 347ZM56 153Q56 168 72 173H708Q722 163 722 153Q722 140 707 133H70Q56 140 56 153Z"
              id="MJX-1-TEX-N-3D"
            />
            <path
              d="M113 -244Q113 -246 119 -251T139 -263T167 -269Q186 -269 199 -260Q220 -247 232 -218T251 -133T262 -15T276 155T297 367Q300 390 305 438T314 512T325 580T340 647T361 703T390 751T428 784T479 804Q481 804 488 804T501 805Q552 802 581 769T610 695Q610 669 594 657T561 645Q542 645 527 658T512 694Q512 705 516 714T526 729T538 737T548 742L552 743Q552 745 545 751T525 762T498 768Q475 768 460 756T434 716T418 652T407 559T398 444T387 300T369 133Q349 -38 337 -102T303 -207Q256 -306 169 -306Q119 -306 87 -272T55 -196Q55 -170 71 -158T104 -146Q123 -146 138 -159T153 -195Q153 -206 149 -215T139 -230T127 -238T117 -242L113 -244Z"
              id="MJX-1-TEX-SO-222B"
            />
            <path
              d="M58 -216Q25 -216 23 -186Q23 -176 73 26T127 234Q143 289 182 341Q252 427 341 441Q343 441 349 441T359 442Q432 442 471 394T510 276Q510 219 486 165T425 74T345 13T266 -10H255H248Q197 -10 165 35L160 41L133 -71Q108 -168 104 -181T92 -202Q76 -216 58 -216ZM424 322Q424 359 407 382T357 405Q322 405 287 376T231 300Q217 269 193 170L176 102Q193 26 260 26Q298 26 334 62Q367 92 389 158T418 266T424 322Z"
              id="MJX-1-TEX-I-1D70C"
            />
            <path
              d="M230 637Q203 637 198 638T193 649Q193 676 204 682Q206 683 378 683Q550 682 564 680Q620 672 658 652T712 606T733 563T739 529Q739 484 710 445T643 385T576 351T538 338L545 333Q612 295 612 223Q612 212 607 162T602 80V71Q602 53 603 43T614 25T640 16Q668 16 686 38T712 85Q717 99 720 102T735 105Q755 105 755 93Q755 75 731 36Q693 -21 641 -21H632Q571 -21 531 4T487 82Q487 109 502 166T517 239Q517 290 474 313Q459 320 449 321T378 323H309L277 193Q244 61 244 59Q244 55 245 54T252 50T269 48T302 46H333Q339 38 339 37T336 19Q332 6 326 0H311Q275 2 180 2Q146 2 117 2T71 2T50 1Q33 1 33 10Q33 12 36 24Q41 43 46 45Q50 46 61 46H67Q94 46 127 49Q141 52 146 61Q149 65 218 339T287 628Q287 635 230 637ZM630 554Q630 586 609 608T523 636Q521 636 500 636T462 637H440Q393 637 386 627Q385 624 352 494T319 361Q319 360 388 360Q466 361 492 367Q556 377 592 426Q608 449 619 486T630 554Z"
              id="MJX-1-TEX-I-1D445"
            />
            <path
              d="M109 429Q82 429 66 447T50 491Q50 562 103 614T235 666Q326 666 387 610T449 465Q449 422 429 383T381 315T301 241Q265 210 201 149L142 93L218 92Q375 92 385 97Q392 99 409 186V189H449V186Q448 183 436 95T421 3V0H50V19V31Q50 38 56 46T86 81Q115 113 136 137Q145 147 170 174T204 211T233 244T261 278T284 308T305 340T320 369T333 401T340 431T343 464Q343 527 309 573T212 619Q179 619 154 602T119 569T109 550Q109 549 114 549Q132 549 151 535T170 489Q170 464 154 447T109 429Z"
              id="MJX-1-TEX-N-32"
            />
            <path
              d="M366 683Q367 683 438 688T511 694Q523 694 523 686Q523 679 450 384T375 83T374 68Q374 26 402 26Q411 27 422 35Q443 55 463 131Q469 151 473 152Q475 153 483 153H487H491Q506 153 506 145Q506 140 503 129Q490 79 473 48T445 8T417 -8Q409 -10 393 -10Q359 -10 336 5T306 36L300 51Q299 52 296 50Q294 48 292 46Q233 -10 172 -10Q117 -10 75 30T33 157Q33 205 53 255T101 341Q148 398 195 420T280 442Q336 442 364 400Q369 394 369 396Q370 400 396 505T424 616Q424 629 417 632T378 637H357Q351 643 351 645T353 664Q358 683 366 683ZM352 326Q329 405 277 405Q242 405 210 374T160 293Q131 214 119 129Q119 126 119 118T118 106Q118 61 136 44T179 26Q233 26 290 98L298 109L352 326Z"
              id="MJX-1-TEX-I-1D451"
            />
            <path
              d="M52 648Q52 670 65 683H76Q118 680 181 680Q299 680 320 683H330Q336 677 336 674T334 656Q329 641 325 637H304Q282 635 274 635Q245 630 242 620Q242 618 271 369T301 118L374 235Q447 352 520 471T595 594Q599 601 599 609Q599 633 555 637Q537 637 537 648Q537 649 539 661Q542 675 545 679T558 683Q560 683 570 683T604 682T668 681Q737 681 755 683H762Q769 676 769 672Q769 655 760 640Q757 637 743 637Q730 636 719 635T698 630T682 623T670 615T660 608T652 599T645 592L452 282Q272 -9 266 -16Q263 -18 259 -21L241 -22H234Q216 -22 216 -15Q213 -9 177 305Q139 623 138 626Q133 637 76 637H59Q52 642 52 648Z"
              id="MJX-1-TEX-I-1D449"
            />
          </defs>
          <g
            fill="currentColor"
            stroke="currentColor"
            stroke-width="0"
            transform="scale(1,-1)"
          >
            <g
              data-mml-node="math"
            >
              <g
                data-mml-node="mi"
              >
                <use
                  data-c="1D43C"
                  xlink:href="#MJX-1-TEX-I-1D43C"
                />
              </g>
              <g
                data-mml-node="mo"
                transform="translate(781.8,0)"
              >
                <use
                  data-c="3D"
                  xlink:href="#MJX-1-TEX-N-3D"
                />
              </g>
              <g
                data-mml-node="mo"
                transform="translate(1837.6,0) translate(0 0.5)"
              >
                <use
                  data-c="222B"
                  xlink:href="#MJX-1-TEX-SO-222B"
                />
              </g>
              <g
                data-mml-node="mi"
                transform="translate(2614.2,0)"
              >
                <use
                  data-c="1D70C"
                  xlink:href="#MJX-1-TEX-I-1D70C"
                />
              </g>
              <g
                data-mml-node="msup"
                transform="translate(3131.2,0)"
              >
                <g
                  data-mml-node="mi"
                >
                  <use
                    data-c="1D445"
                    xlink:href="#MJX-1-TEX-I-1D445"
                  />
                </g>
                <g
                  data-mjx-texclass="ORD"
                  data-mml-node="TeXAtom"
                  transform="translate(792,363) scale(0.707)"
                >
                  <g
                    data-mml-node="mn"
                  >
                    <use
                      data-c="32"
                      xlink:href="#MJX-1-TEX-N-32"
                    />
                  </g>
                </g>
              </g>
              <g
                data-mml-node="mi"
                transform="translate(4326.8,0)"
              >
                <use
                  data-c="1D451"
                  xlink:href="#MJX-1-TEX-I-1D451"
                />
              </g>
              <g
                data-mml-node="mi"
                transform="translate(4846.8,0)"
              >
                <use
                  data-c="1D449"
                  xlink:href="#MJX-1-TEX-I-1D449"
                />
              </g>
            </g>
          </g>
        </svg>
      </mjx-container>
    </span>
  </p>
  

  <div
    class="math math-display"
  >
    <mjx-container
      classname="MathJax"
      display="true"
      jax="SVG"
    >
      <svg
        focusable="false"
        height="5.027ex"
        role="img"
        style="vertical-align:-1.948ex"
        viewBox="0 -1361 5949.8 2222"
        width="13.461ex"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <defs>
          <path
            d="M43 1Q26 1 26 10Q26 12 29 24Q34 43 39 45Q42 46 54 46H60Q120 46 136 53Q137 53 138 54Q143 56 149 77T198 273Q210 318 216 344Q286 624 286 626Q284 630 284 631Q274 637 213 637H193Q184 643 189 662Q193 677 195 680T209 683H213Q285 681 359 681Q481 681 487 683H497Q504 676 504 672T501 655T494 639Q491 637 471 637Q440 637 407 634Q393 631 388 623Q381 609 337 432Q326 385 315 341Q245 65 245 59Q245 52 255 50T307 46H339Q345 38 345 37T342 19Q338 6 332 0H316Q279 2 179 2Q143 2 113 2T65 2T43 1Z"
            id="MJX-2-TEX-I-1D43C"
          />
          <path
            d="M56 347Q56 360 70 367H707Q722 359 722 347Q722 336 708 328L390 327H72Q56 332 56 347ZM56 153Q56 168 72 173H708Q722 163 722 153Q722 140 707 133H70Q56 140 56 153Z"
            id="MJX-2-TEX-N-3D"
          />
          <path
            d="M114 -798Q132 -824 165 -824H167Q195 -824 223 -764T275 -600T320 -391T362 -164Q365 -143 367 -133Q439 292 523 655T645 1127Q651 1145 655 1157T672 1201T699 1257T733 1306T777 1346T828 1360Q884 1360 912 1325T944 1245Q944 1220 932 1205T909 1186T887 1183Q866 1183 849 1198T832 1239Q832 1287 885 1296L882 1300Q879 1303 874 1307T866 1313Q851 1323 833 1323Q819 1323 807 1311T775 1255T736 1139T689 936T633 628Q574 293 510 -5T410 -437T355 -629Q278 -862 165 -862Q125 -862 92 -831T55 -746Q55 -711 74 -698T112 -685Q133 -685 150 -700T167 -741Q167 -789 114 -798Z"
            id="MJX-2-TEX-LO-222B"
          />
          <path
            d="M58 -216Q25 -216 23 -186Q23 -176 73 26T127 234Q143 289 182 341Q252 427 341 441Q343 441 349 441T359 442Q432 442 471 394T510 276Q510 219 486 165T425 74T345 13T266 -10H255H248Q197 -10 165 35L160 41L133 -71Q108 -168 104 -181T92 -202Q76 -216 58 -216ZM424 322Q424 359 407 382T357 405Q322 405 287 376T231 300Q217 269 193 170L176 102Q193 26 260 26Q298 26 334 62Q367 92 389 158T418 266T424 322Z"
            id="MJX-2-TEX-I-1D70C"
          />
          <path
            d="M230 637Q203 637 198 638T193 649Q193 676 204 682Q206 683 378 683Q550 682 564 680Q620 672 658 652T712 606T733 563T739 529Q739 484 710 445T643 385T576 351T538 338L545 333Q612 295 612 223Q612 212 607 162T602 80V71Q602 53 603 43T614 25T640 16Q668 16 686 38T712 85Q717 99 720 102T735 105Q755 105 755 93Q755 75 731 36Q693 -21 641 -21H632Q571 -21 531 4T487 82Q487 109 502 166T517 239Q517 290 474 313Q459 320 449 321T378 323H309L277 193Q244 61 244 59Q244 55 245 54T252 50T269 48T302 46H333Q339 38 339 37T336 19Q332 6 326 0H311Q275 2 180 2Q146 2 117 2T71 2T50 1Q33 1 33 10Q33 12 36 24Q41 43 46 45Q50 46 61 46H67Q94 46 127 49Q141 52 146 61Q149 65 218 339T287 628Q287 635 230 637ZM630 554Q630 586 609 608T523 636Q521 636 500 636T462 637H440Q393 637 386 627Q385 624 352 494T319 361Q319 360 388 360Q466 361 492 367Q556 377 592 426Q608 449 619 486T630 554Z"
            id="MJX-2-TEX-I-1D445"
          />
          <path
            d="M109 429Q82 429 66 447T50 491Q50 562 103 614T235 666Q326 666 387 610T449 465Q449 422 429 383T381 315T301 241Q265 210 201 149L142 93L218 92Q375 92 385 97Q392 99 409 186V189H449V186Q448 183 436 95T421 3V0H50V19V31Q50 38 56 46T86 81Q115 113 136 137Q145 147 170 174T204 211T233 244T261 278T284 308T305 340T320 369T333 401T340 431T343 464Q343 527 309 573T212 619Q179 619 154 602T119 569T109 550Q109 549 114 549Q132 549 151 535T170 489Q170 464 154 447T109 429Z"
            id="MJX-2-TEX-N-32"
          />
          <path
            d="M366 683Q367 683 438 688T511 694Q523 694 523 686Q523 679 450 384T375 83T374 68Q374 26 402 26Q411 27 422 35Q443 55 463 131Q469 151 473 152Q475 153 483 153H487H491Q506 153 506 145Q506 140 503 129Q490 79 473 48T445 8T417 -8Q409 -10 393 -10Q359 -10 336 5T306 36L300 51Q299 52 296 50Q294 48 292 46Q233 -10 172 -10Q117 -10 75 30T33 157Q33 205 53 255T101 341Q148 398 195 420T280 442Q336 442 364 400Q369 394 369 396Q370 400 396 505T424 616Q424 629 417 632T378 637H357Q351 643 351 645T353 664Q358 683 366 683ZM352 326Q329 405 277 405Q242 405 210 374T160 293Q131 214 119 129Q119 126 119 118T118 106Q118 61 136 44T179 26Q233 26 290 98L298 109L352 326Z"
            id="MJX-2-TEX-I-1D451"
          />
          <path
            d="M52 648Q52 670 65 683H76Q118 680 181 680Q299 680 320 683H330Q336 677 336 674T334 656Q329 641 325 637H304Q282 635 274 635Q245 630 242 620Q242 618 271 369T301 118L374 235Q447 352 520 471T595 594Q599 601 599 609Q599 633 555 637Q537 637 537 648Q537 649 539 661Q542 675 545 679T558 683Q560 683 570 683T604 682T668 681Q737 681 755 683H762Q769 676 769 672Q769 655 760 640Q757 637 743 637Q730 636 719 635T698 630T682 623T670 615T660 608T652 599T645 592L452 282Q272 -9 266 -16Q263 -18 259 -21L241 -22H234Q216 -22 216 -15Q213 -9 177 305Q139 623 138 626Q133 637 76 637H59Q52 642 52 648Z"
            id="MJX-2-TEX-I-1D449"
          />
        </defs>
        <g
          fill="currentColor"
          stroke="currentColor"
          stroke-width="0"
          transform="scale(1,-1)"
        >
          <g
            data-mml-node="math"
          >
            <g
              data-mml-node="mi"
            >
              <use
                data-c="1D43C"
                xlink:href="#MJX-2-TEX-I-1D43C"
              />
            </g>
            <g
              data-mml-node="mo"
              transform="translate(781.8,0)"
            >
              <use
                data-c="3D"
                xlink:href="#MJX-2-TEX-N-3D"
              />
            </g>
            <g
              data-mml-node="mo"
              transform="translate(1837.6,0) translate(0 1)"
            >
              <use
                data-c="222B"
                xlink:href="#MJX-2-TEX-LO-222B"
              />
            </g>
            <g
              data-mml-node="mi"
              transform="translate(2948.2,0)"
            >
              <use
                data-c="1D70C"
                xlink:href="#MJX-2-TEX-I-1D70C"
              />
            </g>
            <g
              data-mml-node="msup"
              transform="translate(3465.2,0)"
            >
              <g
                data-mml-node="mi"
              >
                <use
                  data-c="1D445"
                  xlink:href="#MJX-2-TEX-I-1D445"
                />
              </g>
              <g
                data-mjx-texclass="ORD"
                data-mml-node="TeXAtom"
                transform="translate(792,413) scale(0.707)"
              >
                <g
                  data-mml-node="mn"
                >
                  <use
                    data-c="32"
                    xlink:href="#MJX-2-TEX-N-32"
                  />
                </g>
              </g>
            </g>
            <g
              data-mml-node="mi"
              transform="translate(4660.8,0)"
            >
              <use
                data-c="1D451"
                xlink:href="#MJX-2-TEX-I-1D451"
              />
            </g>
            <g
              data-mml-node="mi"
              transform="translate(5180.8,0)"
            >
              <use
                data-c="1D449"
                xlink:href="#MJX-2-TEX-I-1D449"
              />
            </g>
          </g>
        </g>
      </svg>
    </mjx-container>
  </div>
  <style>
    mjx-container[jax="SVG"] {
  direction: ltr;
}

mjx-container[jax="SVG"] &gt; svg {
  overflow: visible;
  min-height: 1px;
  min-width: 1px;
}

mjx-container[jax="SVG"] &gt; svg a {
  fill: blue;
  stroke: blue;
}

mjx-container[jax="SVG"][display="true"] {
  display: block;
  text-align: center;
  margin: 1em 0;
}

mjx-container[jax="SVG"][display="true"][width="full"] {
  display: flex;
}

mjx-container[jax="SVG"][justify="left"] {
  text-align: left;
}

mjx-container[jax="SVG"][justify="right"] {
  text-align: right;
}

g[data-mml-node="merror"] &gt; g {
  fill: red;
  stroke: red;
}

g[data-mml-node="merror"] &gt; rect[data-background] {
  fill: yellow;
  stroke: none;
}

g[data-mml-node="mtable"] &gt; line[data-line], svg[data-table] &gt; g &gt; line[data-line] {
  stroke-width: 70px;
  fill: none;
}

g[data-mml-node="mtable"] &gt; rect[data-frame], svg[data-table] &gt; g &gt; rect[data-frame] {
  stroke-width: 70px;
  fill: none;
}

g[data-mml-node="mtable"] &gt; .mjx-dashed, svg[data-table] &gt; g &gt; .mjx-dashed {
  stroke-dasharray: 140;
}

g[data-mml-node="mtable"] &gt; .mjx-dotted, svg[data-table] &gt; g &gt; .mjx-dotted {
  stroke-linecap: round;
  stroke-dasharray: 0,140;
}

g[data-mml-node="mtable"] &gt; g &gt; svg {
  overflow: visible;
}

[jax="SVG"] mjx-tool {
  display: inline-block;
  position: relative;
  width: 0;
  height: 0;
}

[jax="SVG"] mjx-tool &gt; mjx-tip {
  position: absolute;
  top: 0;
  left: 0;
}

mjx-tool &gt; mjx-tip {
  display: inline-block;
  padding: .2em;
  border: 1px solid #888;
  font-size: 70%;
  background-color: #F8F8F8;
  color: black;
  box-shadow: 2px 2px 5px #AAAAAA;
}

g[data-mml-node="maction"][data-toggle] {
  cursor: pointer;
}

mjx-status {
  display: block;
  position: fixed;
  left: 1em;
  bottom: 1em;
  min-width: 25%;
  padding: .2em .4em;
  border: 1px solid #888;
  font-size: 90%;
  background-color: #F8F8F8;
  color: black;
}

foreignObject[data-mjx-xml] {
  font-family: initial;
  line-height: normal;
  overflow: visible;
}

mjx-container[jax="SVG"] path[data-c], mjx-container[jax="SVG"] use[data-c] {
  stroke-width: 3;
}

  </style>
</div>
`;

exports[`<MdxRenderer /> renders markdown without XSS 1`] = `
<div
  class="markdown-body"
>
  <h1>
    XSS
  </h1>
  

  <p>
    <a>
      click me
    </a>
  </p>
  

  <h2>
    Examples from https://github.com/JakobTheDev/information-security/blob/master/Payloads/md/XSS.md
  </h2>
  

  <p>
    <a>
      Basic
    </a>
    

    <a>
      Local Storage
    </a>
    

    <a>
      CaseInsensitive
    </a>
    

    <a>
      URL
    </a>
    

    <a
      href="'javascript:alert(%22InQuotes%22)'"
    >
      In Quotes
    </a>
    

    <img
      alt="Escape SRC - onload"
      src="https://www.example.com/image.png%22onload=%22alert('ImageOnLoad')"
    />
    

    <img
      alt="Escape SRC - onerror"
      src="%22onerror=%22alert('ImageOnError')"
    />
  </p>
  

  <p>
    <a>
      XSS
    </a>
    
[XSS](j    a   v   a   s   c   r   i   p   t:prompt(document.cookie))

    <a>
      XSS
    </a>
    

    <a
      href="&#x6A&#x61&#x76&#x61&#x73&#x63&#x72&#x69&#x70&#x74&#x3A&#x61&#x6C&#x65&#x72&#x74&#x28&#x27&#x58&#x53&#x53&#x27&#x29"
    >
      XSS
    </a>
    
[XSS]: (javascript:prompt(document.cookie))

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    
[XSS](javascript:this;alert(1))
[XSS](javascript&#58this;alert(1))
[XSS](Javascript:alert(1))
[XSS](Javas%26%2399;ript:alert(1))
[XSS](javascript:alert�(1))
[XSS](javascript:confirm(1)

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    
[XSS](�javascript:alert(document.domain))

    <img
      alt="XSS"
    />
    <br />
    

    <img
      alt="XSS"
      src="data:text/html;base64,PHNjcmlwdD5hbGVydCgnWFNTJyk8L3NjcmlwdD4K"
    />
    <br />
    

    <img
      alt="XSS'"\`onerror=prompt(document.cookie)"
      src="x"
    />
    \\
  </p>
  

  <h2>
    XSS with MDX
  </h2>
  

  <p>
    {
    <a>
      Click Me
    </a>
    }
  </p>
  

  <p>
    { (() =&gt; {
return (
&lt;a href="http://example.com/attack.html" style={{display: "block", zIndex: 100000, opacity: 0.5, position: "fixed", top: "0px", left: 0, width: "1000000px", height: "100000px", backgroundColor: "red"}}&gt; 
)}
)()
}
  </p>
  

  <p>
    { (() =&gt; {
return (
&lt;div style={{display: "block", zIndex: 100000, opacity: 0.5, position: "fixed", top: "0px", left: 0, width: "1000000px", height: "100000px", backgroundColor: "red"}}&gt; 
    <a
      href="http://example.com/attack.html"
    >
       
    </a>
     
)}
)()
}
  </p>
</div>
`;

exports[`<MdxRenderer /> renders markdown without XSS 2`] = `
<div
  class="markdown-body"
>
  <h1>
    XSS
  </h1>
  

  <p>
    <a>
      click me
    </a>
  </p>
  

  <h2>
    Examples from https://github.com/JakobTheDev/information-security/blob/master/Payloads/md/XSS.md
  </h2>
  

  <p>
    <a>
      Basic
    </a>
    

    <a>
      Local Storage
    </a>
    

    <a>
      CaseInsensitive
    </a>
    

    <a>
      URL
    </a>
    

    <a
      href="'javascript:alert(%22InQuotes%22)'"
    >
      In Quotes
    </a>
    

    <img
      alt="Escape SRC - onload"
      src="https://www.example.com/image.png%22onload=%22alert('ImageOnLoad')"
    />
    

    <img
      alt="Escape SRC - onerror"
      src="%22onerror=%22alert('ImageOnError')"
    />
  </p>
  

  <p>
    <a>
      XSS
    </a>
    
[XSS](j    a   v   a   s   c   r   i   p   t:prompt(document.cookie))

    <a>
      XSS
    </a>
    

    <a
      href="&#x6A&#x61&#x76&#x61&#x73&#x63&#x72&#x69&#x70&#x74&#x3A&#x61&#x6C&#x65&#x72&#x74&#x28&#x27&#x58&#x53&#x53&#x27&#x29"
    >
      XSS
    </a>
    
[XSS]: (javascript:prompt(document.cookie))

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    
[XSS](javascript:this;alert(1))
[XSS](javascript&#58this;alert(1))
[XSS](Javascript:alert(1))
[XSS](Javas%26%2399;ript:alert(1))
[XSS](javascript:alert�(1))
[XSS](javascript:confirm(1)

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    

    <a>
      XSS
    </a>
    
[XSS](�javascript:alert(document.domain))

    <img
      alt="XSS"
    />
    <br />
    

    <img
      alt="XSS"
      src="data:text/html;base64,PHNjcmlwdD5hbGVydCgnWFNTJyk8L3NjcmlwdD4K"
    />
    <br />
    

    <img
      alt="XSS'"\`onerror=prompt(document.cookie)"
      src="x"
    />
    \\
  </p>
  

  <h2>
    XSS with MDX
  </h2>
  

  <a>
    Click Me
  </a>
  

  <a
    href="http://example.com/attack.html"
    style=""
  >
     
  </a>
  

  <div
    style=""
  >
     
    <a
      href="http://example.com/attack.html"
    >
       
    </a>
     
  </div>
</div>
`;

exports[`<MdxRenderer /> renders simple markdown 1`] = `
<div
  class="markdown-body"
>
  <h1>
    An h1 header
  </h1>
  

  <p>
    Paragraphs are separated by a blank line.
  </p>
  

  <p>
    2nd paragraph. 
    <em>
      Italic
    </em>
    , 
    <strong>
      bold
    </strong>
    , and 
    <code>
      monospace
    </code>
    . Itemized lists
look like:
  </p>
  

  <ul>
    

    <li>
      this one
    </li>
    

    <li>
      that one
    </li>
    

    <li>
      the other one
    </li>
    

    <li>
      trfjgdl
    </li>
    

    <li>
      letngldf
    </li>
    

    <li>
      ldfnvlnfv
    </li>
    

    <li>
      nldnfvl
    </li>
    

    <li>
      :dvkdv
    </li>
    

  </ul>
  

  <p>
    Note that --- not considering the asterisk --- the actual text
content starts at 4-columns in.
  </p>
  

  <blockquote>
    

    <p>
      Block quotes are
written like so.
    </p>
    

    <p>
      They can span multiple paragraphs,
if you like.
    </p>
    

  </blockquote>
  

  <p>
    Use 3 dashes for an em-dash. Use 2 dashes for ranges (ex., "it's all
in chapters 12--14"). Three dots ... will be converted to an ellipsis.
Unicode is supported. ☺
  </p>
  

  <h2>
    An h2 header
  </h2>
  

  <p>
    Here's a numbered list:
  </p>
  

  <ol>
    

    <li>
      first item
    </li>
    

    <li>
      second item
    </li>
    

    <li>
      third item
    </li>
    

  </ol>
  

  <p>
    You can use delimited blocks, if you like:
  </p>
  

  <pre>
    <code>
      define foobar() {
    print "Welcome to flavor country!";
}

    </code>
  </pre>
  

  <p>
    (which makes copying & pasting easier). You can optionally mark the
delimited block for Pandoc to syntax highlight it:
  </p>
  

  <pre>
    <code
      class="hljs language-python"
    >
      <span
        class="hljs-keyword"
      >
        import
      </span>
       time

      <span
        class="hljs-comment"
      >
        # Quick, count to ten!
      </span>
      

      <span
        class="hljs-keyword"
      >
        for
      </span>
       i 
      <span
        class="hljs-keyword"
      >
        in
      </span>
       
      <span
        class="hljs-built_in"
      >
        range
      </span>
      (
      <span
        class="hljs-number"
      >
        10
      </span>
      ):
    
      <span
        class="hljs-comment"
      >
        # (but not *too* quick)
      </span>
      
    time.sleep(
      <span
        class="hljs-number"
      >
        0.5
      </span>
      )
    
      <span
        class="hljs-built_in"
      >
        print
      </span>
       i

    </code>
  </pre>
  

  <h3>
    An h3 header
  </h3>
  

  <p>
    Now a nested list:
  </p>
  

  <ol>
    

    <li>
      

      <p>
        First, get these ingredients:
      </p>
      

      <ul>
        

        <li>
          carrots
        </li>
        

        <li>
          celery
        </li>
        

        <li>
          lentils
        </li>
        

      </ul>
      

    </li>
    

    <li>
      

      <p>
        Boil some water.
      </p>
      

    </li>
    

    <li>
      

      <p>
        Dump everything in the pot and follow
this algorithm:
      </p>
      

      <pre>
        <code>
          find wooden spoon
uncover pot
stir
cover pot
balance wooden spoon precariously on pot handle
wait 10 minutes
goto first step (or shut off burner when done)

        </code>
      </pre>
      

      <p>
        Do not bump wooden spoon or it will fall.
      </p>
      

    </li>
    

  </ol>
  

  <p>
    Notice again how text always lines up on 4-space indents (including
that last line which continues item 3 above).
  </p>
  

  <p>
    Here's a link to 
    <a
      href="http://foo.bar"
    >
      a website
    </a>
    , to a 
    <a
      href="local-doc.html"
    >
      local
doc
    </a>
    , and to a 
    <a
      href="#an-h2-header"
    >
      section heading in the current
doc
    </a>
    . Here's a footnote [^1].
  </p>
  

  <p>
    [^1]: Footnote text goes here.
  </p>
  

  <p>
    Tables can look like this:
  </p>
  

  <p>
    size  material      color
  </p>
  

  <hr />
  

  <p>
    9     leather       brown
10    hemp canvas   natural
11    glass         transparent
  </p>
  

  <p>
    Table: Shoes, their sizes, and what they're made of
  </p>
  

  <p>
    (The above is the caption for the table.) Pandoc also supports
multi-line tables:
  </p>
  

  <hr />
  

  <p>
    keyword   text
  </p>
  

  <hr />
  

  <p>
    red       Sunsets, apples, and
other red or reddish
things.
  </p>
  

  <p>
    green     Leaves, grass, frogs
and other things it's
not easy being.
  </p>
  

  <hr />
  

  <p>
    A horizontal rule follows.
  </p>
  

  <hr />
  

  <p>
    Here's a definition list:
  </p>
  

  <p>
    apples
: Good for making applesauce.
oranges
: Citrus!
tomatoes
: There's no "e" in tomatoe.
  </p>
  

  <p>
    Again, text is indented 4 spaces. (Put a blank line between each
term/definition pair to spread things out more.)
  </p>
  

  <p>
    Here's a "line block":
  </p>
  

  <p>
    | Line one
|   Line too
| Line tree
  </p>
  

  <p>
    Markdown also accept HTML tags like this:
  </p>
  

  <table>
    
    
    <tbody>
      <tr>
        
        
        <td>
          Foo
        </td>
        
    
      </tr>
    </tbody>
  </table>
</div>
`;
